--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="twitter:image" content="https://storage.cloud.google.com/static.scroll.com/assets/icn-scroll-logo.svg">
+  <meta name="twitter:image" content="https://u-scroll.imgix.net/dev/tmp.svg">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="My card">
   <title>Document</title>
