--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="twitter:image" content="https://u-scroll.imgix.net/dev/tmp.svg">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="My card">
+  <meta name="twitter:description" content="throw a description on">
   <title>Document</title>
 </head>
 <body>
